--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
+    "start:all": "./start_all_services.sh",
+    "start:connectors": "python start_connector_service.py",
+    "start:snowflake": "python start_python_service.py",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
