use simple connector

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "NODE_ENV=production node dist/index.js",
     "start:all": "./start_all_services.sh",
     "start:replit": "./start_replit.sh",
-    "start:connectors": "python start_connector_service.py",
+    "start:connectors": "python start_simple_connector_service.py",
     "start:connectors:quick": "python quick_start_connectors.py",
     "start:snowflake": "python start_python_service.py",
     "check": "tsc",
