--- a/requirements_simple_connectors.txt
+++ b/requirements_simple_connectors.txt
@@ -1,8 +1,10 @@
-# Simple Python Connector Dependencies (no pandas)
+# Simple Python Connector Dependencies (with compatible pandas/numpy)
 flask==2.3.3
 requests==2.31.0
 snowflake-connector-python==3.2.1
 python-dotenv==1.0.0
+pandas==1.5.3
+numpy==1.24.3
 
 # Additional dependencies for specific connectors
 # Jira connector uses base64 encoding (built-in)
