--- a/requirements_simple_connectors.txt
+++ b/requirements_simple_connectors.txt
@@ -1,7 +1,7 @@
 # Simple Python Connector Dependencies (with compatible pandas/numpy)
 flask==2.3.3
 requests==2.31.0
-snowflake-connector-python==3.2.1
+snowflake-connector-python[pure]==3.2.1
 python-dotenv==1.0.0
 pandas==1.5.3
 numpy==1.24.3
