postgresql migration and fix dashboard

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "start:replit": "./start_replit.sh",
     "start:connectors": "python start_simple_connector_service.py",
     "start:connectors:quick": "python quick_start_connectors.py",
-    "start:snowflake": "python start_python_service.py",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -55,6 +54,7 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.1",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
@@ -71,6 +71,7 @@
     "openid-client": "^6.5.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -82,7 +83,6 @@
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "snowflake-sdk": "^2.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
