--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,5 @@
-# Snowflake Configuration
-SNOWFLAKE_ACCOUNT="your-snowflake-account"
-SNOWFLAKE_USER="your-snowflake-user"
-SNOWFLAKE_ACCESS_TOKEN="your-snowflake-access-token"
-SNOWFLAKE_WAREHOUSE="your-warehouse-name"
-SNOWFLAKE_DATABASE="your-database-name"
-SNOWFLAKE_SCHEMA="your-schema-name"
-
-# Other Configuration
-WORKSPACE_ID="your-workspace-id"
-OPENAI_API_KEY="your-openai-api-key"
+# Database Configuration (PostgreSQL for both application and analytics data)
+DATABASE_URL="postgresql://username:password@localhost:5432/database_name"
 
 # OpenAI Configuration (optional)
 AZURE_OPENAI_KEY="your-azure-openai-key"
