--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,20 @@ AZURE_OPENAI_ENDPOINT="your-azure-endpoint"
 
 # Session Configuration
 SESSION_SECRET="your-session-secret-key"
+
+# OAuth Configuration
+# Jira OAuth (create app at https://developer.atlassian.com/console/myapps/)
+JIRA_OAUTH_CLIENT_ID="your-jira-oauth-client-id"
+JIRA_OAUTH_CLIENT_SECRET="your-jira-oauth-client-secret"
+
+# HubSpot OAuth (create app at https://developers.hubspot.com/)
+HUBSPOT_OAUTH_CLIENT_ID="your-hubspot-oauth-client-id"
+HUBSPOT_OAUTH_CLIENT_SECRET="your-hubspot-oauth-client-secret"
+
+# Zoho OAuth (create app at https://api-console.zoho.com/)
+ZOHO_OAUTH_CLIENT_ID="your-zoho-oauth-client-id"
+ZOHO_OAUTH_CLIENT_SECRET="your-zoho-oauth-client-secret"
+ZOHO_DATACENTER="com"  # Options: com, eu, in, com.au, jp
+
+# Application Configuration
+APP_URL="http://localhost:5000"  # For OAuth redirect URIs
